--- a/cpp-server/CMakeLists.txt
+++ b/cpp-server/CMakeLists.txt
@@ -68,7 +68,9 @@ SET (CppServer_HDRS
 )
 
 SET (CppServer_Test_SRCS
-    ${CMAKE_CURRENT_SOURCE_DIR}/test/worker_test.cpp)
+    ${CMAKE_CURRENT_SOURCE_DIR}/test/test_main.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/test/worker_test.cpp
+)
 
 # Enable C++17 for Clang on MacOS X.
 IF (APPLE AND ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang"))
